# MyMusicSystem

./: .gitignore  .mcp.json  GAME_RULES.md  README.md  add_more.py  clear_daily.py  do_task.py  generate_list.py  get_discovery.py  get_playlist_tracks.py  get_user_playlist.py  mcp_server.py  play_next.py  pyproject.toml  run_tidal.py  script.py  test_playlists.py  test_rate.py  test_tidal.py
.claude/: settings.local.json
agent_tools/: tools.py
config/: engines.yaml  settings.yaml
connectors/: __init__.py  essentia_extractor.py  lastfm.py  musicbrainz.py  spotify.py  tidal.py
core/: base_engine.py  db.py  diversity.py  engine_registry.py  orchestrator.py  playlist_manager.py  session.py
database/migrations/: 001_init.sql
engines/: __init__.py
engines/bandit_explorer/: engine.py  manifest.yaml
engines/collaborative_filter/: engine.py  manifest.yaml
engines/content_similarity/: engine.py  manifest.yaml
engines/genre_explorer/: engine.py  manifest.yaml
engines/lastfm_graph/: engine.py  manifest.yaml
engines/lastfm_tag_similarity/: engine.py  manifest.yaml
engines/tidal_mix/: engine.py  manifest.yaml
research/: README.md  summary.md
research/apis/: audio_features.md  lastfm.md  listenbrainz.md  musicbrainz.md  other.md  spotify.md  tidal.md
research/projects/: libraries.md  similar_systems.md
research/techniques/: algorithms.md
tests/: conftest.py
tests/contract/: test_engine_contract.py
tests/integration/: test_full_session.py  test_playlist_sync.py
tools/: mock_audio_features.py  run_gemma_review.py  tidal_auth.py
(+14 files in other folders)
